[package]
name = "allratestoday"
version = "1.0.1"
edition = "2021"
description = "Official Rust SDK for AllRatesToday — real-time mid-market exchange rates for 160+ currencies"
license = "MIT"
repository = "https://github.com/AllRates-Today/allratestoday-rust"
homepage = "https://allratestoday.com"
documentation = "https://docs.rs/allratestoday"
keywords = ["exchange-rate", "currency", "forex", "api", "allratestoday"]
categories = ["api-bindings", "finance"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
